the gap between the carousel and menu fix

--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -76,7 +76,7 @@
   }
   
   .carousel {
-  margin-top:-50px;
+  margin-top:-55px;
 }
 
 }
@@ -898,7 +898,7 @@
     top: 20px;
   }
   .carousel {
-  margin-top:-50px;
+  margin-top:-55px;
 }  
 }
 
@@ -953,7 +953,7 @@
     position: static;
   }
   .carousel {
-  margin-top:-50px;
+  margin-top:-55px;
 }
 }
 
